1.8.13.dev0
 * #785: Add an "only_run_on" option to consistency checks so you can limit a check to running on
   particular days of the week. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/deal-with-very-large-backups/#check-days
 * #886: Fix a PagerDuty hook traceback with Python < 3.10.
 * #889: Fix the Healthchecks ping body size limit, restoring it to the documented 100,000 bytes.

1.8.12
 * #817: Add a "--max-duration" flag to the "check" action and a "max_duration" option to the
   repository check configuration. This tells Borg to interrupt a repository check after a certain
   duration.
 * #860: Fix interaction between environment variable interpolation in constants and shell escaping.
 * #863: When color output is disabled (explicitly or implicitly), don't prefix each log line with
   the log level.
 * #865: Add an "upload_buffer_size" option to set the size of the upload buffer used in "create"
   action.
 * #866: Fix "Argument list too long" error in the "spot" check when checking hundreds of thousands
   of files at once.
 * #874: Add the configured repository label as "repository_label" to the interpolated variables
   passed to before/after command hooks.
 * #881: Fix "Unrecognized argument" error when the same value is used with different command-line
   flags.
 * In the "spot" check, don't try to hash symlinked directories.

1.8.11
 * #815: Add optional Healthchecks auto-provisioning via "create_slug" option.
 * #851: Fix lack of file extraction when using "extract --strip-components all" on a path with a
   leading slash.
 * #854: Fix a traceback when the "data" consistency check is used.
 * #857: Fix a traceback with "check --only spot" when the "spot" check is unconfigured.

1.8.10
 * #656 (beta): Add a "spot" consistency check that compares file counts and contents between your
   source files and the latest archive, ensuring they fall within configured tolerances. This can